--- a/DemoQAProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/DemoQAProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:13</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Register.after()[pri:0, instance:com.toolsqa.Register@6a192cfe]">&lt;&lt;after</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:00</td>   <td>-12365</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Register.before()[pri:0, instance:com.toolsqa.Register@6a192cfe]">&gt;&gt;before</td> 
+<tr bgcolor="b4b1b9">  <td>24/09/16 09:28:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTable.before()[pri:0, instance:com.toolsqa.WebTable@61df66b6]">&gt;&gt;before</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:13</td>   <td>-126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.click()[pri:0, instance:com.toolsqa.Register@6a192cfe]">click</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:13</td>   <td>-95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.firstname()[pri:0, instance:com.toolsqa.Register@6a192cfe]">firstname</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:13</td>   <td>-68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.lastname()[pri:0, instance:com.toolsqa.Register@6a192cfe]">lastname</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:13</td>   <td>-61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.password()[pri:0, instance:com.toolsqa.Register@6a192cfe]">password</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:13</td>   <td>-52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.register()[pri:0, instance:com.toolsqa.Register@6a192cfe]">register</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>24/09/11 12:23:13</td>   <td>-38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.username()[pri:0, instance:com.toolsqa.Register@6a192cfe]">username</td> 
+<tr bgcolor="b4b1b9">  <td>24/09/16 09:28:47</td>   <td>28181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTable.test()[pri:0, instance:com.toolsqa.WebTable@61df66b6]">test</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
