--- a/DemoQAProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/DemoQAProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4b1b9">  <td>24/10/04 15:00:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Widgets.widgetstools()[pri:0, instance:com.toolsqa.Widgets@6a28ffa4]">widgetstools</td> 
+<tr bgcolor="b4b1b9">  <td>24/10/14 13:46:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Interactions.sortable()[pri:0, instance:com.toolsqa.Interactions@6a28ffa4]">sortable</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
